# geoh5-interop

./: .gitignore  .pre-commit-config.yaml  deps-lock-config.yaml  py-3.10.conda-lock.yml  py-3.12.conda-lock.yml  pylintrc  pyproject.toml  recipe.yaml
.github/workflows/: issue_to_jira.yml  python_analysis.yml  python_deploy_dev.yml  python_deploy_prod.yml  security_scan.yml
environments/: py-3.10-linux-64-dev.conda.lock.yml  py-3.10-linux-64.conda.lock.yml  py-3.10-win-64-dev.conda.lock.yml  py-3.10-win-64.conda.lock.yml  py-3.12-linux-64-dev.conda.lock.yml  py-3.12-linux-64.conda.lock.yml  py-3.12-win-64-dev.conda.lock.yml  py-3.12-win-64.conda.lock.yml
geoh5_interop/: __init__.py
tests/: __init__.py  version_test.py
